--- a/.github/workflows/daily_task.yml
+++ b/.github/workflows/daily_task.yml
@@ -39,4 +39,4 @@ jobs:
       uses: stefanzweifel/git-auto-commit-action@v4
       with:
         commit_message: Crawl today bing wallpaper
-        add_options: '-u'
+        add_options: '-A'
