--- a/.github/workflows/gc.yml
+++ b/.github/workflows/gc.yml
@@ -15,7 +15,11 @@ jobs:
     
     - name: test
       run: |
-        echo $(git verify-pack -v .git/objects/pack/*.idx | grep blob | sort -k 3 -n -r | awk '{print$1}')
+        export hashs=$(git verify-pack -v .git/objects/pack/*.idx | grep blob | sort -k 3 -n -r | awk '{print$1}')
+        echo $hashs
+        export filename=$(git rev-list --objects --all | grep $hashs[0] | awk '{print$2}' | grep '^wallpaper.*jpg$')
+        echo $filename
+        echo $(git log --pretty=oneline --branches -- ${filename} | wc -l)
     
     - name: run gc
       run: bash rm_overdate_file.sh
