--- a/.github/workflows/sync_to_lsky_pro.yml
+++ b/.github/workflows/sync_to_lsky_pro.yml
@@ -16,4 +16,5 @@ jobs:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.KEY }}
+          port: ${{ secrets.PORT }}
           script: bash /root/lsky-pro/update_bing.sh
